test_data/Json/Unexpected/Unserializable/InvalidModelType/File/wrong.json.exception
Expected the model type 'File', but got soReallyUtterlyInvalid at: modelType